--- a/preprocessing/Eksperimen_Safira_Madania.ipynb
+++ b/preprocessing/Eksperimen_Safira_Madania.ipynb
@@ -89,9 +89,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dde81abb-045f-40bb-c3f2-f8f126c0a016"
+        "outputId": "480e01a0-1591-4fa1-88b0-341bab6bfce1"
       },
-      "execution_count": 158,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,9 +137,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 105
         },
-        "outputId": "4dfdf0de-525d-4d65-d55b-8fa1484c7946"
+        "outputId": "b52015e0-b34b-4aea-adf5-3084956c2dd0"
       },
-      "execution_count": 159,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1flLI9QLKRF_TVRD1zkkBYbJr2WEwrCyh\n",
             "To: /content/phishing_dataset.arff\n",
-            "100%|██████████| 1.37M/1.37M [00:00<00:00, 110MB/s]\n"
+            "100%|██████████| 1.37M/1.37M [00:00<00:00, 46.2MB/s]\n"
           ]
         },
         {
@@ -162,7 +162,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 159
+          "execution_count": 2
         }
       ]
     },
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "hc71ezl_Q8Gv"
       },
-      "execution_count": 160,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -189,9 +189,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 256
         },
-        "outputId": "f722c1d0-8da8-4562-9266-f0bc332b846a"
+        "outputId": "eca6ee8a-fd16-461a-aed1-c3bc01c273ba"
       },
-      "execution_count": 161,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0307f4bd-bf11-4a8d-9e1a-a78c8ca0acaf\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-50bde9d7-d76e-401b-ae8b-20d06e28d119\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -406,7 +406,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0307f4bd-bf11-4a8d-9e1a-a78c8ca0acaf')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50bde9d7-d76e-401b-ae8b-20d06e28d119')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -458,12 +458,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0307f4bd-bf11-4a8d-9e1a-a78c8ca0acaf button.colab-df-convert');\n",
+              "        document.querySelector('#df-50bde9d7-d76e-401b-ae8b-20d06e28d119 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0307f4bd-bf11-4a8d-9e1a-a78c8ca0acaf');\n",
+              "        const element = document.querySelector('#df-50bde9d7-d76e-401b-ae8b-20d06e28d119');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -483,8 +483,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e645d87b-f335-48ab-aa45-580a6302a8e9\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e645d87b-f335-48ab-aa45-580a6302a8e9')\"\n",
+              "    <div id=\"df-c5bdfe61-c2db-452a-8a0b-379c99ba5a6f\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c5bdfe61-c2db-452a-8a0b-379c99ba5a6f')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -603,7 +603,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e645d87b-f335-48ab-aa45-580a6302a8e9 button');\n",
+              "            document.querySelector('#df-c5bdfe61-c2db-452a-8a0b-379c99ba5a6f button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -619,7 +619,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 161
+          "execution_count": 4
         }
       ]
     },
@@ -633,9 +633,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDhA0JnORg6A",
-        "outputId": "3be46445-a22e-4ee2-c2d4-72679a86a5be"
+        "outputId": "f648ce11-ad03-4598-80ae-7784b1cd7149"
       },
-      "execution_count": 162,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,9 +725,9 @@
           "height": 350
         },
         "id": "0dxDGCf9SU6f",
-        "outputId": "bbc485f6-2ef0-4dc8-8f46-be1778d10b83"
+        "outputId": "fafc7c2f-e197-4a5a-8ac5-011c3fb1ec18"
       },
-      "execution_count": 163,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +797,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dcdf6706-e4ef-46e1-aac6-8874c682d9a5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-73234f65-ee2f-422b-84aa-216cd19d10cc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1039,7 +1039,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dcdf6706-e4ef-46e1-aac6-8874c682d9a5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73234f65-ee2f-422b-84aa-216cd19d10cc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1091,12 +1091,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dcdf6706-e4ef-46e1-aac6-8874c682d9a5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-73234f65-ee2f-422b-84aa-216cd19d10cc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dcdf6706-e4ef-46e1-aac6-8874c682d9a5');\n",
+              "        const element = document.querySelector('#df-73234f65-ee2f-422b-84aa-216cd19d10cc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1116,8 +1116,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-55b044ea-656b-4823-b98b-2665c2ddb38d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-55b044ea-656b-4823-b98b-2665c2ddb38d')\"\n",
+              "    <div id=\"df-d68f52f3-0c4c-4f92-a251-3030e63c8868\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d68f52f3-0c4c-4f92-a251-3030e63c8868')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1236,7 +1236,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-55b044ea-656b-4823-b98b-2665c2ddb38d button');\n",
+              "            document.querySelector('#df-d68f52f3-0c4c-4f92-a251-3030e63c8868 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1251,7 +1251,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 163
+          "execution_count": 6
         }
       ]
     },
@@ -1266,9 +1266,9 @@
           "height": 1000
         },
         "id": "Vxfcufj7SXNV",
-        "outputId": "2282efee-7e9c-4bcc-ce17-555ef085b43b"
+        "outputId": "980b23c0-7a01-4526-a287-f0d35a0b4bf2"
       },
-      "execution_count": 164,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1550,7 +1550,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 164
+          "execution_count": 7
         }
       ]
     },
@@ -1564,9 +1564,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZEFHRfJSSabQ",
-        "outputId": "a403beef-267a-4b51-d76f-71422599da9f"
+        "outputId": "c1e41365-f9b0-48a6-f765-3dc923da1ab7"
       },
-      "execution_count": 165,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1576,7 +1576,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 165
+          "execution_count": 8
         }
       ]
     },
@@ -1607,9 +1607,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9D54HmvbS5sW",
-        "outputId": "9b17f0fc-6092-4be6-af41-da9fca727802"
+        "outputId": "18670bb3-8d26-416e-abd5-a63dfdf64113"
       },
-      "execution_count": 166,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,9 +1641,9 @@
           "height": 521
         },
         "id": "tesHmHRfSczE",
-        "outputId": "7582d517-0042-4976-f467-a5817ae3deb3"
+        "outputId": "eae12c36-93dc-41e8-9f29-dcbe5a33f47d"
       },
-      "execution_count": 167,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1672,12 +1672,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 388
+          "height": 577
         },
         "id": "28xFIAF_Ste5",
-        "outputId": "20679de4-4d73-49fd-bbe3-f0f22e80bb30"
+        "outputId": "09a4b773-ae2e-4657-9016-c0be3a7cbd5b"
       },
-      "execution_count": 168,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1723,12 +1723,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 562
+          "height": 786
         },
         "id": "-t3YiNQjSkwP",
-        "outputId": "08fd7cfd-ea1a-4076-ce4d-d33e3cef2f58"
+        "outputId": "6e610d9c-c1f7-48b2-ab32-26488d900bc2"
       },
-      "execution_count": 169,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1766,6 +1766,17 @@
     {
       "cell_type": "code",
       "source": [
+        "df = df.drop_duplicates().reset_index(drop=True)"
+      ],
+      "metadata": {
+        "id": "ePfn17Zl0P3I"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# UBAH label dari byte string ke integer\n",
         "df['CLASS_LABEL'] = (\n",
         "    df['CLASS_LABEL']\n",
@@ -1776,15 +1787,14 @@
       "metadata": {
         "id": "_Jm3xCQICL3-"
       },
-      "execution_count": 170,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Menghapus fitur yang terindikasi multikolinearitas dan fitur skor\n",
-        "threshold = 0.80\n",
-        "to_drop_multi = [column for column in upper_tri.columns if any(upper_tri[column].abs() > threshold)]\n",
+        "to_drop_multi = [column for column in upper_tri.columns if any(upper_tri[column].abs() > 0.8)]\n",
         "\n",
         "to_drop_skor = [c for c in df.columns if c.endswith('RT')]\n",
         "\n",
@@ -1799,30 +1809,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-uonIk37yi4e",
-        "outputId": "f8d857c8-d38d-4511-8bb3-b65631e0a674"
+        "outputId": "b5e256a5-ff77-49d8-8ae4-99ea3a2c2c49"
       },
-      "execution_count": 171,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitur yang dihapus: ['NumAmpersand', 'SubdomainLevelRT', 'ExtMetaScriptLinkRT', 'UrlLengthRT', 'PctExtResourceUrlsRT', 'PctExtNullSelfRedirectHyperlinksRT', 'QueryLength', 'AbnormalExtFormActionR']\n",
+            "Fitur yang dihapus: ['ExtMetaScriptLinkRT', 'AbnormalExtFormActionR', 'NumAmpersand', 'QueryLength', 'PctExtResourceUrlsRT', 'SubdomainLevelRT', 'PctExtNullSelfRedirectHyperlinksRT', 'UrlLengthRT']\n",
             "Sisa kolom: 41\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_final = df_final.drop_duplicates().reset_index(drop=True)"
-      ],
-      "metadata": {
-        "id": "ePfn17Zl0P3I"
-      },
-      "execution_count": 172,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1851,9 +1850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rAYqmoqn144y",
-        "outputId": "053d4e11-bc71-4691-d68a-8f7acf68a898"
+        "outputId": "0b0f3731-7fd6-4b40-fa55-22b80ef86031"
       },
-      "execution_count": 173,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1874,18 +1873,14 @@
         "X = df_final.drop('CLASS_LABEL', axis=1)\n",
         "y = df_final['CLASS_LABEL'].replace(-1, 0)\n",
         "\n",
-        "X_train, X_temp, y_train, y_temp = train_test_split(\n",
-        "    X, y, test_size=0.30, random_state=42, stratify=y\n",
-        ")\n",
-        "\n",
-        "X_val, X_test, y_val, y_test = train_test_split(\n",
-        "    X_temp, y_temp, test_size=0.50, random_state=42, stratify=y_temp\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.20, random_state=42, stratify=y\n",
         ")"
       ],
       "metadata": {
         "id": "CE7gIt2j0p06"
       },
-      "execution_count": 174,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1900,68 +1895,13 @@
         ")\n",
         "\n",
         "X_train_p = preprocess.fit_transform(X_train)\n",
-        "X_val_p   = preprocess.transform(X_val)\n",
         "X_test_p  = preprocess.transform(X_test)"
       ],
       "metadata": {
         "id": "k4qOV1ss0pxb"
       },
-      "execution_count": 175,
+      "execution_count": 18,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "feature_names = kolom_numerik2 + kolom_binary2\n",
-        "X_train_p = pd.DataFrame(X_train_p, columns=feature_names)\n",
-        "X_val_p   = pd.DataFrame(X_val_p,   columns=feature_names)\n",
-        "X_test_p  = pd.DataFrame(X_test_p,  columns=feature_names)\n",
-        "\n",
-        "train_df = X_train_p.copy()\n",
-        "train_df['CLASS_LABEL'] = y_train.values\n",
-        "\n",
-        "val_df = X_val_p.copy()\n",
-        "val_df['CLASS_LABEL'] = y_val.values\n",
-        "\n",
-        "test_df = X_test_p.copy()\n",
-        "test_df['CLASS_LABEL'] = y_test.values"
-      ],
-      "metadata": {
-        "id": "4ewjDUgh256H"
-      },
-      "execution_count": 176,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "os.makedirs(\"namadataset_preprocessing\", exist_ok=True)\n",
-        "train_df.to_csv(\"namadataset_preprocessing/train.csv\", index=False)\n",
-        "test_df.to_csv(\"namadataset_preprocessing/test.csv\", index=False)\n",
-        "val_df.to_csv(\"namadataset_preprocessing/val.csv\", index=False)\n",
-        "\n",
-        "train_df.shape, test_df.shape, val_df.shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "avF8QzV53CEb",
-        "outputId": "4d4510b1-b395-4e59-dbed-b946ee3dec69"
-      },
-      "execution_count": 177,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((6706, 41), (1438, 41), (1437, 41))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 177
-        }
-      ]
     }
   ]
 }
