Fix K1: save preprocessed dataset at end of notebook

--- a/preprocessing/Eksperimen_Safira_Madania.ipynb
+++ b/preprocessing/Eksperimen_Safira_Madania.ipynb
@@ -82,16 +82,18 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.pipeline import Pipeline\n",
         "import os\n",
-        "import joblib"
+        "import joblib\n",
+        "from joblib import dump\n",
+        "\n"
       ],
       "metadata": {
         "id": "BlmvjLY9M4Yj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "480e01a0-1591-4fa1-88b0-341bab6bfce1"
+        "outputId": "af8f0577-f05a-4daf-83cc-0dd84daaf3e8"
       },
-      "execution_count": 1,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,9 +139,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 105
         },
-        "outputId": "b52015e0-b34b-4aea-adf5-3084956c2dd0"
+        "outputId": "6542fed5-6354-4058-dee7-923b840e6c53"
       },
-      "execution_count": 2,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +150,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1flLI9QLKRF_TVRD1zkkBYbJr2WEwrCyh\n",
             "To: /content/phishing_dataset.arff\n",
-            "100%|██████████| 1.37M/1.37M [00:00<00:00, 46.2MB/s]\n"
+            "100%|██████████| 1.37M/1.37M [00:00<00:00, 19.5MB/s]\n"
           ]
         },
         {
@@ -162,7 +164,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 38
         }
       ]
     },
@@ -175,7 +177,7 @@
       "metadata": {
         "id": "hc71ezl_Q8Gv"
       },
-      "execution_count": 3,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -189,9 +191,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 256
         },
-        "outputId": "eca6ee8a-fd16-461a-aed1-c3bc01c273ba"
+        "outputId": "08b1199a-b0a1-4b04-df18-7f38f70031b4"
       },
-      "execution_count": 4,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +238,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-50bde9d7-d76e-401b-ae8b-20d06e28d119\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4af1abf5-46e1-45d0-93f0-feb106257743\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -406,7 +408,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50bde9d7-d76e-401b-ae8b-20d06e28d119')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4af1abf5-46e1-45d0-93f0-feb106257743')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -458,12 +460,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-50bde9d7-d76e-401b-ae8b-20d06e28d119 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4af1abf5-46e1-45d0-93f0-feb106257743 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-50bde9d7-d76e-401b-ae8b-20d06e28d119');\n",
+              "        const element = document.querySelector('#df-4af1abf5-46e1-45d0-93f0-feb106257743');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -483,8 +485,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c5bdfe61-c2db-452a-8a0b-379c99ba5a6f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c5bdfe61-c2db-452a-8a0b-379c99ba5a6f')\"\n",
+              "    <div id=\"df-e5797b9e-1604-41cd-bdca-31189a52dbc6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e5797b9e-1604-41cd-bdca-31189a52dbc6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -603,7 +605,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c5bdfe61-c2db-452a-8a0b-379c99ba5a6f button');\n",
+              "            document.querySelector('#df-e5797b9e-1604-41cd-bdca-31189a52dbc6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -619,7 +621,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 40
         }
       ]
     },
@@ -633,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDhA0JnORg6A",
-        "outputId": "f648ce11-ad03-4598-80ae-7784b1cd7149"
+        "outputId": "e9b4df22-1b7b-4cb3-9708-a6d317bac03b"
       },
-      "execution_count": 5,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,9 +727,9 @@
           "height": 350
         },
         "id": "0dxDGCf9SU6f",
-        "outputId": "fafc7c2f-e197-4a5a-8ac5-011c3fb1ec18"
+        "outputId": "9dd8df05-8991-4f2f-df3a-4b523caa3a6f"
       },
-      "execution_count": 6,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +799,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-73234f65-ee2f-422b-84aa-216cd19d10cc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-79b03868-0c35-47a5-b946-de67ef5d0242\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1039,7 +1041,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73234f65-ee2f-422b-84aa-216cd19d10cc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-79b03868-0c35-47a5-b946-de67ef5d0242')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1091,12 +1093,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-73234f65-ee2f-422b-84aa-216cd19d10cc button.colab-df-convert');\n",
+              "        document.querySelector('#df-79b03868-0c35-47a5-b946-de67ef5d0242 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-73234f65-ee2f-422b-84aa-216cd19d10cc');\n",
+              "        const element = document.querySelector('#df-79b03868-0c35-47a5-b946-de67ef5d0242');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1116,8 +1118,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d68f52f3-0c4c-4f92-a251-3030e63c8868\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d68f52f3-0c4c-4f92-a251-3030e63c8868')\"\n",
+              "    <div id=\"df-11c6875d-8f40-4552-8760-3b031cd0ab6b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-11c6875d-8f40-4552-8760-3b031cd0ab6b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1236,7 +1238,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d68f52f3-0c4c-4f92-a251-3030e63c8868 button');\n",
+              "            document.querySelector('#df-11c6875d-8f40-4552-8760-3b031cd0ab6b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1251,7 +1253,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 42
         }
       ]
     },
@@ -1266,9 +1268,9 @@
           "height": 1000
         },
         "id": "Vxfcufj7SXNV",
-        "outputId": "980b23c0-7a01-4526-a287-f0d35a0b4bf2"
+        "outputId": "3e7ceb54-79cb-4f11-e8f9-c43ea0df5f7a"
       },
-      "execution_count": 7,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1550,7 +1552,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 43
         }
       ]
     },
@@ -1564,9 +1566,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZEFHRfJSSabQ",
-        "outputId": "c1e41365-f9b0-48a6-f765-3dc923da1ab7"
+        "outputId": "97392906-083f-4b2b-fc96-4d6fd945891e"
       },
-      "execution_count": 8,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1576,7 +1578,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 44
         }
       ]
     },
@@ -1607,9 +1609,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9D54HmvbS5sW",
-        "outputId": "18670bb3-8d26-416e-abd5-a63dfdf64113"
+        "outputId": "933263f3-9f5f-4890-e3ac-1d7b7210dd3a"
       },
-      "execution_count": 9,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,9 +1643,9 @@
           "height": 521
         },
         "id": "tesHmHRfSczE",
-        "outputId": "eae12c36-93dc-41e8-9f29-dcbe5a33f47d"
+        "outputId": "c6d94bae-903a-4cbc-a338-3e2a59adb826"
       },
-      "execution_count": 10,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1672,12 +1674,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 577
+          "height": 388
         },
         "id": "28xFIAF_Ste5",
-        "outputId": "09a4b773-ae2e-4657-9016-c0be3a7cbd5b"
+        "outputId": "4577c830-9b42-4869-e489-a26e404b6e43"
       },
-      "execution_count": 11,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1723,12 +1725,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 786
+          "height": 562
         },
         "id": "-t3YiNQjSkwP",
-        "outputId": "6e610d9c-c1f7-48b2-ab32-26488d900bc2"
+        "outputId": "5fa723bf-e14f-406c-f553-b6e84bc69594"
       },
-      "execution_count": 12,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1771,7 +1773,7 @@
       "metadata": {
         "id": "ePfn17Zl0P3I"
       },
-      "execution_count": 13,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1787,7 +1789,7 @@
       "metadata": {
         "id": "_Jm3xCQICL3-"
       },
-      "execution_count": 14,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1809,9 +1811,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-uonIk37yi4e",
-        "outputId": "b5e256a5-ff77-49d8-8ae4-99ea3a2c2c49"
+        "outputId": "7aae1205-2d88-4721-f86f-75d02afc3532"
       },
-      "execution_count": 15,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -1850,9 +1852,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rAYqmoqn144y",
-        "outputId": "0b0f3731-7fd6-4b40-fa55-22b80ef86031"
+        "outputId": "8b2450e6-e592-4933-f428-b27afc8e1460"
       },
-      "execution_count": 16,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -1880,7 +1882,7 @@
       "metadata": {
         "id": "CE7gIt2j0p06"
       },
-      "execution_count": 17,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1900,8 +1902,42 @@
       "metadata": {
         "id": "k4qOV1ss0pxb"
       },
-      "execution_count": 18,
+      "execution_count": 54,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out_dir = Path(\"preprocessing/phishing_preprocessing\")\n",
+        "out_dir.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "pd.DataFrame(X_train_p).to_csv(out_dir / \"X_train_processed.csv\", index=False)\n",
+        "pd.DataFrame(X_test_p).to_csv(out_dir / \"X_test_processed.csv\", index=False)\n",
+        "\n",
+        "pd.DataFrame(y_train).to_csv(out_dir / \"y_train.csv\", index=False)\n",
+        "pd.DataFrame(y_test).to_csv(out_dir / \"y_test.csv\", index=False)\n",
+        "\n",
+        "dump(preprocess, out_dir / \"preprocessor.joblib\")\n",
+        "\n",
+        "print(\"✅ Saved:\", list(out_dir.glob(\"*\")))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VMowwgv40BN0",
+        "outputId": "76eee22c-8f7a-45b5-dbf2-45cc9698a240"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Saved: [PosixPath('preprocessing/phishing_preprocessing/preprocessor.joblib'), PosixPath('preprocessing/phishing_preprocessing/X_train_processed.csv'), PosixPath('preprocessing/phishing_preprocessing/X_test_processed.csv'), PosixPath('preprocessing/phishing_preprocessing/y_train.csv'), PosixPath('preprocessing/phishing_preprocessing/y_test.csv')]\n"
+          ]
+        }
+      ]
     }
   ]
 }
